# pdf_auto_filler_hoja_padronal

./: code_to_text.sh  file_contents.txt  integration_test.py  main.py  main.spec  pyproject.toml  readme.md  requirements.txt  setup.py  setup.spec
exmaples/: main.py
modules/: config.json  data_generation.py  pdf_filler.py  supabase_client.py  utils.py
